refactor(corners): make compile-time adjustments to the API changes in limlib